- ErmaC - Auto increase year for pkg resource.

- JrCs - Add translation to the project.

- ErmaC - Update Language for whobuild resources.

- JrCs - Improved Installer - Start using template scripts

- JrCs - Look for a com.apple.Boot.plist file for users upgrading from legacy installations

- Only create Chameleon.Backups and write to the install log, if required.

- JrCs - Improved backup of chameleon files

- JrCs - Automaticaly select previous options

- JrCs - Improved buildpkg script - Simplify the construction of options menu - Add a lot of checks to avoid the construction of a bad XML file

- Change Localizable.strings to match the recent changes to the install process.

- Improve messages written to the installation log.

- Change upgrade install to only backup /Extra folder if necessary.

- JrCs - Enhanced installer - We can add an option without an associated package - We can have an option that install
multiple packages - No more "fake" option (none) - The package that is build is already compressed (no need to
compress it again)

- JrCs - Update postinstall script - Fix a bug where kernel flags are not set properly - Fix indent - Add some comments.

- JrCs - Automaticaly select upgrade option if /Extra/org.chameleon.Boot.plist file exists on the target volume.

- JrCs - Keylayout / Keymaps fixed and made a mandatory install when a keymap is chosen.

- Add option to upgrade an existing install - or more exactly, merge newly selected options with an existing /Extra folder. Also, rename an existing /Extra/com.apple.Boot.plist to /Extra/org.chameleon.Boot.plist.

- Change the layout/wording displayed in the installer (English only) and give it a facelift. Adjust background image to scale to fit in the window.

- Set exclusive 'None' option to default choice.

- Add code to detect and make necessary changes to avoid possibility of a b1f:error or boot1:error should the user decide to install a secondary boot partition.

- Fix bug installing to /Volumes/EFI
