@@ -35,6 +35,8 @@ enum volume_kind_t
 	_exfat = 1,
 	_hfs = 2,
 	_msdos = 3,
+	_ntfs = 4,
+	_ext4 = 5,
 	_other = 255
 };
 
@@ -544,6 +546,9 @@ int checkSupportedVolume(enum volume_kind_t* pKind, struct buffer_t const* pBpbB
 			else
 				*pKind = _other;
 			break;
+		case _ntfs:
+			rc = 0;
+			break;
 		default:
 			break;
 	}
@@ -598,6 +603,8 @@ int checkDevicePath2(char const* pathName)
 			daVolumeKind = _hfs;
 		else if (!strcmp(cstr, "msdos"))
 			daVolumeKind = _msdos;
+		else if (!strcmp(cstr, "ntfs"))
+			daVolumeKind = _ntfs;
 		else
 			daVolumeKind = _other;
 	}
@@ -736,6 +743,7 @@ int main(int argc, char* const argv[])
 			case _exfat:
 			case _hfs:
 			case _msdos:
+			case _ntfs:
 				break;
 			default:
 				unsupported();
@@ -776,8 +784,10 @@ int main(int argc, char* const argv[])
 		}
 		printf("Using %s as default boot template\n", bootFile);
 	}
+
 	if (loadChunk(bootFile, 0, 0, &bootBlob) < 0)
 		goto cleanup_and_error;
+
 	switch (daVolumeKind) {
 		case _exfat:
 			if (calcSum(&bootBlob, &bpbBlob, &outputBlob, devicePath) < 0)
